manifests/scots-lab/apps/emulatorjs/_bootstrap.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
  name: emulatorjs
---
apiVersion: v1
kind: Service
metadata:
  name: emulatorjs
  namespace: emulatorjs
spec:
  ports:
  - name: proxy
    port: 4180
    targetPort: 4180
  selector:
    app: emulatorjs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: emulatorjs
  name: emulatorjs
  namespace: emulatorjs
spec:
  replicas: 0
  selector:
    matchLabels:
      app: emulatorjs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: emulatorjs
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        - name: TZ
          value: America/Los_Angeles
        image: linuxserver/emulatorjs:latest
        name: emulatorjs
        ports:
        - containerPort: 3000
          name: frontend
        - containerPort: 80
          name: backend
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 256Mi
        securityContext:
          runAsNonRoot: false
          runAsUser: 0
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
      - args:
        - --provider=oidc
        - --oidc-issuer-url=https://auth.srbii.com/realms/homelab
        - --upstream=http://127.0.0.1:3000
        - --http-address=0.0.0.0:4180
        - --email-domain=*
        - --pass-user-headers=true
        - --pass-authorization-header=true
        - --cookie-secure=true
        - --redirect-url=https://play.srbii.com/oauth2/callback
        - --cookie-domain=.srbii.com
        - --whitelist-domain=.srbii.com
        - --skip-provider-button=true
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          name: proxy
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: emulatorjs-config
      - name: data
        persistentVolumeClaim:
          claimName: emulatorjs-data
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emulatorjs
  namespace: emulatorjs
spec:
  hostnames:
  - play.srbii.com
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  rules:
  - backendRefs:
    - name: emulatorjs
      port: 4180
    matches:
    - path:
        type: PathPrefix
        value: /
